Fixed position iPhone-img

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ body {
 }
 
 .logo-alumnos{
-  width: 10%;
+  width: 15%;
   padding-right: 10px;
 }
 /** Button download**/
@@ -123,6 +123,8 @@ body {
   .img-iphone {
     position: static;
     transform: rotate(0);
+    width: 300px;
+    height: 603.5px;
   }
 }
 
